@@ -4,6 +4,8 @@ Title: Sample Size Estimation
 Version: 0.7-12
 Author: Thomas Fabbro [aut, cre]
 Maintainer: Thomas Fabbro <thomas.fabbro@unibas.ch>
+URL: http://r-forge.r-project.org/projects/power/
+BugReports: http://r-forge.r-project.org/projects/power/
 Description: Provides functions to evaluate user-defined power functions for a parameter range, and draws a sensitivity plot. It also provides a resampling procedure for semi-parametric sample size estimation and methods for adding information to a Sweave report.
 License: GPL-3
 LazyLoad: yes
